--- a/frontend/src/components/InsideTravelogue.css
+++ b/frontend/src/components/InsideTravelogue.css
@@ -20,16 +20,43 @@ li {
 }
 
 .button-page {
+  padding: 0;
   scale: 0.5;
   border-radius: 1rem;
-  background-color: darkgoldenrod;
-  padding: 5px;
-  min-width: 30vh;
+  background-color: beige;
+}
+
+.button-carnet {
+  padding: 0;
+  scale: 0.5;
+  border-radius: 1rem;
+  background: linear-gradient(#693c08, black);
+  scale: 1.5;
 }
 
 .inside-travelogue {
+  background: linear-gradient(#693c08, black);
   max-width: 50%;
   position: absolute;
-  top: 25%;
-  transform: translateX(100%);
+  top: 40%;
+  left: 35%;
+}
+
+.pack-travelogue {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10rem;
+}
+
+.travelogue {
+  background-color: beige;
+}
+
+.page:hover {
+  scale: 1.5;
+  position: relative;
+  z-index: 10;
+  transition: 0.2s ease-in-out;
 }
