--- a/frontend/src/components/InsideTravelogue.css
+++ b/frontend/src/components/InsideTravelogue.css
@@ -1,6 +1,6 @@
 .page {
   height: 50vh;
-  background-image: url("../img/page.jpg");
+  background-image: url("../assets/page.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
