--- a/frontend/src/components/InsideTravelogue.css
+++ b/frontend/src/components/InsideTravelogue.css
@@ -40,12 +40,22 @@ li {
   box-shadow: 1rem 0 3rem;
 }
 
+.button-carnet:hover {
+  scale: 2;
+  transition: 0.2s ease-out;
+}
+
 .inside-travelogue {
-  background: linear-gradient(transparent, #693c08);
+  background: linear-gradient(transparent, #eccfb0);
   max-width: 50%;
   position: absolute;
   top: 40%;
-  left: 35%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  max-width: 25rem;
   border-radius: 2rem;
 }
 
@@ -62,4 +72,19 @@ li {
   opacity: 50%;
   border-top-left-radius: 2rem;
   border-bottom-left-radius: 2rem;
+}
+
+.logo {
+  text-align: center;
+}
+
+.logo {
+  position: absolute;
+  top: -200px;
+  scale: 0.4;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
