--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,13 @@ body {
   background-size: cover;
   background-position: center;
 }
+
+@media screen and (orientation: landscape) {
+  body {
+    background-position: repeat;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
