--- a/frontend/src/components/InsideTravelogue.css
+++ b/frontend/src/components/InsideTravelogue.css
@@ -27,7 +27,7 @@ li {
   padding: 0;
   scale: 0.5;
   border-radius: 1rem;
-  background-image: url("../img/carnet.png");
+  background-image: url("../assets/carnet.png");
   background-repeat: no-repeat;
   background-size: cover;
   border: 0;
@@ -64,10 +64,17 @@ li {
 }
 
 .travelogue h5 {
-  background-color: lightblue;
+  background-color: #eccfb0;
   opacity: 50%;
   border-top-left-radius: 2rem;
   border-bottom-left-radius: 2rem;
+}
+
+.travelogue p {
+  background-color: #eccfb0;
+  opacity: 50%;
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
 }
 
 .logo {
@@ -98,4 +105,15 @@ li {
   list-style: circle;
   font-family: "Virgil";
   text-align: left;
+}
+
+.photoInside {
+  height: 5rem;
+  transform: translateX(50%);
+}
+
+.photoInside:active {
+  scale: 4;
+  z-index: 50;
+  transition: 0.5s ease-in-out;
 }
