--- a/frontend/src/components/InsideTravelogue.css
+++ b/frontend/src/components/InsideTravelogue.css
@@ -12,6 +12,12 @@
   border-radius: 1rem;
 }
 
+.inside-travelogue:hover {
+  scale: 2;
+  transition: 0.2s ease;
+  top: 20%;
+}
+
 li {
   list-style: none;
 }
